Fix Spacing of total-cost row and update Changelog

--- a/offer-manager-app/src/main/resources/offer-template/stylesheet.css
+++ b/offer-manager-app/src/main/resources/offer-template/stylesheet.css
@@ -126,6 +126,7 @@ h2 {
 
 .total-costs-sum-row {
   font-weight: bold;
+  white-space:nowrap;
 }
 
 .signature {
